TestSuite/errors/err0339.pas
begin
  System.Threading.Tasks.Task.Run&<string>(nil);
end.